# oxideav-fbx

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: anim_writer.rs  animation.rs  ascii.rs  ascii_writer.rs  binary.rs  decoder.rs  definitions.rs  deformer.rs  deformer_writer.rs  documents.rs  encoder.rs  geometry.rs  geometry_kind.rs  globals.rs  header_info.rs  lib.rs  lights_cameras.rs  material.rs  node_attribute.rs  node_transform.rs  pose.rs  properties70.rs  scene.rs  scene_writer.rs  takes.rs  writer.rs
tests/: ascii_fixture.rs  encoder_roundtrip.rs  fuzz_mutation.rs  synthetic_anim_skin.rs  synthetic_definitions.rs  synthetic_global_settings.rs  synthetic_light_camera.rs  synthetic_material.rs  synthetic_multi_material.rs  synthetic_multi_normal.rs  synthetic_node_attribute.rs  synthetic_node_transform.rs  synthetic_pose.rs  synthetic_quad.rs  synthetic_tangent_binormal.rs  synthetic_uv.rs  synthetic_vertex_color.rs  writer_roundtrip.rs
tests/fixtures/: README.md
